--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <meta description="Primer proyecto para el portafolio Web: Diseño Web online."/>
+        <meta name="description" content="Primer proyecto para el portafolio Web: Diseño Web online"/>
         <title>Playa2015: Comunidad de personas diferentes</title>
+        <link rel="stylesheet" type="text/css" href="normalize.css">
+        <link rel="stylesheet" type="text/css" href="estilos.css">
     </head>
     <body>
         <header>
@@ -49,11 +51,141 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up"></a>
+        			<a href="#" class="up">U</a>
         			    720
-        			<a href="#" class="down"></a>
-        			<a href="#" class="comentarios_item">69</a>
-        			<a href="#" class="guardar_item"></a>
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
+        		</div>
+        	</article>
+        	<article class="item">
+        		<figure class="imagen_item">
+        		    <img src="imagen.jpg">
+        		</figure>
+        		<h2 class="titulo_item">
+        		    <a href="#">
+        		    	Título del artículo
+        		    </a>
+        		</h2>
+        		<div class="autor_item">
+        			por <a href="#">Joana Muñoz</a>
+        		</div>
+        		<div class="datos_item">
+        			<a href="#" class="tag_item">pony</a>
+        			<span class="fecha_item">
+        			    hace <strong>5</strong>min
+        			</span>
+        		</div>
+        		<div class="votacion">
+        			<a href="#" class="up">U</a>
+        			    720
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
+        		</div>
+        	</article>
+        	<article class="item">
+        		<figure class="imagen_item">
+        		    <img src="imagen.jpg">
+        		</figure>
+        		<h2 class="titulo_item">
+        		    <a href="#">
+        		    	Título del artículo
+        		    </a>
+        		</h2>
+        		<div class="autor_item">
+        			por <a href="#">Joana Muñoz</a>
+        		</div>
+        		<div class="datos_item">
+        			<a href="#" class="tag_item">pony</a>
+        			<span class="fecha_item">
+        			    hace <strong>5</strong>min
+        			</span>
+        		</div>
+        		<div class="votacion">
+        			<a href="#" class="up">U</a>
+        			    720
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
+        		</div>
+        	</article>
+        	<article class="item">
+        		<figure class="imagen_item">
+        		    <img src="imagen.jpg">
+        		</figure>
+        		<h2 class="titulo_item">
+        		    <a href="#">
+        		    	Título del artículo
+        		    </a>
+        		</h2>
+        		<div class="autor_item">
+        			por <a href="#">Joana Muñoz</a>
+        		</div>
+        		<div class="datos_item">
+        			<a href="#" class="tag_item">pony</a>
+        			<span class="fecha_item">
+        			    hace <strong>5</strong>min
+        			</span>
+        		</div>
+        		<div class="votacion">
+        			<a href="#" class="up">U</a>
+        			    720
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
+        		</div>
+        	</article>
+        	<article class="item">
+        		<figure class="imagen_item">
+        		    <img src="imagen.jpg">
+        		</figure>
+        		<h2 class="titulo_item">
+        		    <a href="#">
+        		    	Título del artículo
+        		    </a>
+        		</h2>
+        		<div class="autor_item">
+        			por <a href="#">Joana Muñoz</a>
+        		</div>
+        		<div class="datos_item">
+        			<a href="#" class="tag_item">pony</a>
+        			<span class="fecha_item">
+        			    hace <strong>5</strong>min
+        			</span>
+        		</div>
+        		<div class="votacion">
+        			<a href="#" class="up">U</a>
+        			    720
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
+        		</div>
+        	</article>
+        	<article class="item">
+        		<figure class="imagen_item">
+        		    <img src="imagen.jpg">
+        		</figure>
+        		<h2 class="titulo_item">
+        		    <a href="#">
+        		    	Título del artículo
+        		    </a>
+        		</h2>
+        		<div class="autor_item">
+        			por <a href="#">Joana Muñoz</a>
+        		</div>
+        		<div class="datos_item">
+        			<a href="#" class="tag_item">pony</a>
+        			<span class="fecha_item">
+        			    hace <strong>5</strong>min
+        			</span>
+        		</div>
+        		<div class="votacion">
+        			<a href="#" class="up">U</a>
+        			    720
+        			<a href="#" class="down">D</a>
+        			<a href="#" class="comentarios_item">3</a>
+        			<a href="#" class="guardar_item">X</a>
         		</div>
         	</article>
         </section>
