--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8"/>
         <meta name="description" content="Primer proyecto para el portafolio Web: Diseño Web online"/>
         <title>Playa2015: Comunidad de personas diferentes</title>
+        <link rel="stylesheet" href="http://i.icomoon.io/public/temp/6a7e2f6d81/UntitledProject/style.css">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="normalize.css">
         <link rel="stylesheet" type="text/css" href="estilos.css">
     </head>
@@ -181,7 +183,7 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
+        			<a href="#" class="icon-f-arriba"></a>
         			    720
         			<a href="#" class="down">D</a>
         			<a href="#" class="comentarios_item">3</a>
