--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="description" content="Primer proyecto para el portafolio Web: Diseño Web online"/>
+        <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
         <title>Playa2015: Comunidad de personas diferentes</title>
-        <link rel="stylesheet" href="http://i.icomoon.io/public/temp/6a7e2f6d81/UntitledProject/style.css">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>
+        <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>-->
         <link rel="stylesheet" type="text/css" href="normalize.css">
         <link rel="stylesheet" type="text/css" href="estilos.css">
+        <script type="text/javascript" src="prefixfree.min.js"></script>
     </head>
     <body>
         <header>
@@ -29,10 +30,24 @@
         		<li><a href="#">CSS3</a></li>
         		<li><a href="#">Django</a></li>
         		<li id="publicar_nav">
-        		    <a href="#">Publicar</a>
+        		    <a href="#" class="icon-lapiz" id="mostrar-form">Publicar</a>
         		</li>
         	</ul>
         </nav>
+        <form action="" id="formulario" class="formulario">
+            <!--<label for="titulo">Título:</label>-->
+            <input type="text" id="titulo" placeholder="Título" required />
+            <!--<label for="url">Url:</label>-->
+            <input type="url" id="url" placeholder="Url" required />
+            <input type="submit" value="Agregar" />
+        </form>
+        <aside>
+            <video width="320" height="240" controls autoplay />
+            <source src="videos/Playa2015.mp4" type="video/mp4"/>
+            <source src="videos/Playa2015.ogg" type="video/ogg"/>
+            Actualiza tu navegador 
+        </video>
+        </aside>
         <section id="contenido">
         	<article class="item">
         		<figure class="imagen_item">
@@ -53,11 +68,11 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
+        			<a href="#" class="up icon-f-arriba"></a>
         			    720
-        			<a href="#" class="down">D</a>
+        			<a href="#" class="down icon-f-abajo"></a>
         			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
+        			<a href="#" class="guardar_item icon-estrella"></a>
         		</div>
         	</article>
         	<article class="item">
@@ -79,12 +94,12 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
-        			    720
-        			<a href="#" class="down">D</a>
-        			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
-        		</div>
+                    <a href="#" class="up icon-f-arriba"></a>
+                        720
+                    <a href="#" class="down icon-f-abajo"></a>
+                    <a href="#" class="comentarios_item">3</a>
+                    <a href="#" class="guardar_item icon-estrella"></a>
+                </div>
         	</article>
         	<article class="item">
         		<figure class="imagen_item">
@@ -105,12 +120,12 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
-        			    720
-        			<a href="#" class="down">D</a>
-        			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
-        		</div>
+                    <a href="#" class="up icon-f-arriba"></a>
+                        720
+                    <a href="#" class="down icon-f-abajo"></a>
+                    <a href="#" class="comentarios_item">3</a>
+                    <a href="#" class="guardar_item icon-estrella"></a>
+                </div>
         	</article>
         	<article class="item">
         		<figure class="imagen_item">
@@ -131,12 +146,12 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
-        			    720
-        			<a href="#" class="down">D</a>
-        			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
-        		</div>
+                    <a href="#" class="up icon-f-arriba"></a>
+                        720
+                    <a href="#" class="down icon-f-abajo"></a>
+                    <a href="#" class="comentarios_item">3</a>
+                    <a href="#" class="guardar_item icon-estrella"></a>
+                </div>
         	</article>
         	<article class="item">
         		<figure class="imagen_item">
@@ -157,38 +172,12 @@
         			</span>
         		</div>
         		<div class="votacion">
-        			<a href="#" class="up">U</a>
-        			    720
-        			<a href="#" class="down">D</a>
-        			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
-        		</div>
-        	</article>
-        	<article class="item">
-        		<figure class="imagen_item">
-        		    <img src="imagen.jpg">
-        		</figure>
-        		<h2 class="titulo_item">
-        		    <a href="#">
-        		    	Título del artículo
-        		    </a>
-        		</h2>
-        		<div class="autor_item">
-        			por <a href="#">Joana Muñoz</a>
-        		</div>
-        		<div class="datos_item">
-        			<a href="#" class="tag_item">pony</a>
-        			<span class="fecha_item">
-        			    hace <strong>5</strong>min
-        			</span>
-        		</div>
-        		<div class="votacion">
-        			<a href="#" class="icon-f-arriba"></a>
-        			    720
-        			<a href="#" class="down">D</a>
-        			<a href="#" class="comentarios_item">3</a>
-        			<a href="#" class="guardar_item">X</a>
-        		</div>
+                    <a href="#" class="up icon-f-arriba"></a>
+                        720
+                    <a href="#" class="down icon-f-abajo"></a>
+                    <a href="#" class="comentarios_item">3</a>
+                    <a href="#" class="guardar_item icon-estrella"></a>
+                </div>
         	</article>
         </section>
         <footer>
@@ -199,5 +188,7 @@
         		comunidad.playa 2015
         	</p>
         </footer>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="formulario.js"></script>
     </body>
 </html>
